syntax = "proto3";

import "Type.proto";

package Protobuf.Server;

// id: 0
message LoginRequest {
    string Username = 1;
    string Password = 2;
}

// id: 1
message TokenLoginRequest {
    string Token = 1;
}

// id: 2
message MoveRequest {
    string EntityId = 1;
    Vector2 Position = 2;
    Quaternion Rotation = 3;
}