syntax = "proto3";

package Protobuf;

message Vector2 {
    float x = 1;
    float y = 2;
}

message Quaternion {
    float x = 1;
    float y = 2;
    float z = 3;
    float w = 4;
}

message Entity {
    string UUID = 1;
    string OwnerUUID = 2;
    string Name = 3;
    Vector2 Position = 4;
    Vector2 TargetPosition = 5;
    Quaternion Rotation = 6;
    string Data = 7;
}

enum WeaponType {
    WeaponType_None = 0;
}

enum RoleType {
    RoleType_None = 0;
}

message User {
    string UUID = 1;
    string Name = 2;
    WeaponType Weapon = 3;
    RoleType Role = 4;
    bool IsReady = 5;
    bool IsMaster = 6;
}

message RoomInfo {
    string UUID = 1;
    string Name = 2;
    bool IsPrivate = 3;
    int32 PlayerCount = 4;
}

message Room {
    RoomInfo Info = 1;
    repeated User Users = 2;
}
